typescript
Script started on Mon 15 Apr 2019 03:07:13 PM PDT
murphya6@CF165-18:~$ cd csci241
murphya6@CF165-18:~/csci241$ cd lab-1-murphya6
murphya6@CF165-18:~/csci241/lab-1-murphya6$ gradle run
[0mStarting a Gradle Daemon (subsequent builds will be faster)


[2A[1B[1m> Starting Daemon[m[17D[1B[1A[1m> Starting Daemon[m[17D[1B[1A[1m> Starting Daemon[m[17D[1B[1A[1m> Starting Daemon[m[17D[1B[1A[1m> Starting Daemon[m[17D[1B[1A> IDLE[0K[6D[1B[2A[1m<[0;32;1;0;39;1m-------------> 0% INITIALIZING [0s][m[36D[1B[1m> Evaluating settings[m[21D[1B[2A[1m<[0;32;1;0;39;1m-------------> 0% INITIALIZING [0s][m[36D[1B[1m> Evaluating settings[m[21D[1B[2A[1m<[0;32;1;0;39;1m-------------> 0% INITIALIZING [0s][m[36D[1B[1m> Evaluating settings[m[21D[1B[2A[1m<[0;32;1;0;39;1m-------------> 0% CONFIGURING [0s][m[0K[35D[1B[1m> Loading projects[m[0K[18D[1B[2A[1m<[0;32;1;0;39;1m-------------> 0% CONFIGURING [0s][m[35D[1B[1m> root project[m[0K[14D[1B[2A[1m<[0;32;1;0;39;1m-------------> 0% CONFIGURING [0s][m[35D[1B[1m> root project[m[14D[1B[2A[1m<[0;32;1;0;39;1m-------------> 0% CONFIGURING [0s][m[35D[1B[1m> root project[m[14D[1B[2A[1m<[0;32;1;0;39;1m-------------> 0% CONFIGURING [0s][m[35D[1B[1m> root project[m[14D[1B[2A[1m<[0;32;1;0;39;1m-------------> 0% CONFIGURING [0s][m[35D[1B[1m> root project[m[14D[1B[2A[1m<[0;32;1;0;39;1m-------------> 0% CONFIGURING [0s][m[35D[1B[1m> root project[m[14D[1B[2A[1m<[0;32;1;0;39;1m-------------> 0% CONFIGURING [1s][m[35D[1B[1m> root project[m[14D[1B[2A[1m<[0;32;1m=============[0;39;1m> 100% CONFIGURING [1s][m[37D[1B> IDLE[0K[6D[1B[2A[1m<[0;32;1;0;39;1m-------------> 0% EXECUTING [1s][m[0K[33D[2B[2A[1m<[0;32;1;0;39;1m-------------> 0% EXECUTING [1s][m[33D[1B[1m> :compileJava[m[14D[1B[2A[1m<[0;32;1m=========[0;39;1m----> 75% EXECUTING [1s][m[34D[1B[1m> :run[m[0K[6D[1B[2A[1m<[0;32;1m=========[0;39;1m----> 75% EXECUTING [1s][m[34D[1B[1m> :run[m[6D[1B[2A[0K
[1m> Task :run[m
Hello World!

[32;1mBUILD SUCCESSFUL[0;39m in 3s
2 actionable tasks: 1 executed, 1 up-to-date
[0K
[0K
[2A[1m<[0;32;1;0;39;1m-------------> 0% WAITING[m[26D[1B> IDLE[6D[1B[2A[1m<[0;32;1;0;39;1m-------------> 0% WAITING[m[26D[2B[2A[2K[1B[2K[1A[0mmurphya6@CF165-18:~/csci241/lab-1-murphya6$ gras[Kdle run --args="potato"
[0m

[2A[1m<[0;32;1;0;39;1m-------------> 0% EXECUTING [0s][m[33D[1B[1m> :compileJava[m[14D[1B[2A[1m<[0;32;1;0;39;1m-------------> 0% EXECUTING [0s][m[33D[1B[1m> :compileJava[m[14D[1B[2A[1m<[0;32;1;0;39;1m-------------> 0% EXECUTING [0s][m[33D[1B[1m> :compileJava[m[14D[1B[2A[0K
[31;1m> Task :compileJava[0;39m[31m FAILED[39m
/home/murphya6/csci241/lab-1-murphya6/src/main/java/lab1/Hello.java:5: error: no suitable method found for println(String,String[],String)
        System.out.println("Hello ",args,"!");
                  ^
    method PrintStream.println() is not applicable
      (actual and formal argument lists differ in length)
    method PrintStream.println(boolean) is not applicable
      (actual and formal argument lists differ in length)
    method PrintStream.println(char) is not applicable
      (actual and formal argument lists differ in length)
    method PrintStream.println(int) is not applicable
      (actual and formal argument lists differ in length)
    method PrintStream.println(long) is not applicable
      (actual and formal argument lists differ in length)
    method PrintStream.println(float) is not applicable
      (actual and formal argument lists differ in length)
    method PrintStream.println(double) is not applicable
      (actual and formal argument lists differ in length)
    method PrintStream.println(char[]) is not applicable
      (actual and formal argument lists differ in length)
    method PrintStream.println(String) is not applicable
      (actual and formal argument lists differ in length)
    method PrintStream.println(Object) is not applicable
      (actual and formal argument lists differ in length)
1 error

[31mFAILURE: [39m[31mBuild failed with an exception.[39m

* What went wrong:
Execution failed for task ':compileJava'.
[33m> [39mCompilation failed; see the compiler error output for details.

* Try:
Run with [1m--stacktrace[m option to get the stack trace. Run with [1m--info[m or [1m--debug[m option to get more log output. Run with [1m--scan[m to get full insights.

* Get more help at [1mhttps://help.gradle.org[m

[31;1mBUILD FAILED[0;39m in 0s
1 actionable task: 1 executed
[0K
[0K
[2A[1m<[0;32;1;0;39;1m-------------> 0% WAITING[m[26D[1B> IDLE[6D[1B[2A[1m<[0;32;1;0;39;1m-------------> 0% WAITING[m[26D[2B[2A[1m<[0;32;1;0;39;1m-------------> 0% WAITING[m[26D[2B[2A[2K[1B[2K[1A[0mmurphya6@CF165-18:~/csci241/lab-1-murphya6$ gradle run --args="potato"
[0m
[1A
[31;1m> Task :compileJava[0;39m[31m FAILED[39m
/home/murphya6/csci241/lab-1-murphya6/src/main/java/lab1/Hello.java:5: error: cannot find symbol
        System.out.println("Hello ",arg,"!");
                                    ^
  symbol:   variable arg
  location: class Hello
1 error

[31mFAILURE: [39m[31mBuild failed with an exception.[39m

* What went wrong:
Execution failed for task ':compileJava'.
[33m> [39mCompilation failed; see the compiler error output for details.

* Try:
Run with [1m--stacktrace[m option to get the stack trace. Run with [1m--info[m or [1m--debug[m option to get more log output. Run with [1m--scan[m to get full insights.

* Get more help at [1mhttps://help.gradle.org[m

[31;1mBUILD FAILED[0;39m in 0s
1 actionable task: 1 executed

[1A[1m<[0;32;1;0;39;1m-------------> 0% WAITING[m[26D[1B[1A[1m<[0;32;1;0;39;1m-------------> 0% WAITING[m[26D[1B[1A[2K[0mmurphya6@CF165-18:~/csci241/lab-1-murphya6$ gradle run --args="potato"
[0m

[2A[1m<[0;32;1;0;39;1m-------------> 0% EXECUTING [0s][m[33D[1B[1m> :compileJava[m[14D[1B[2A[1m<[0;32;1m=========[0;39;1m----> 75% EXECUTING [0s][m[34D[1B[1m> :run[m[0K[6D[1B[2A[0K
[1m> Task :run[m
Hello potato!

[32;1mBUILD SUCCESSFUL[0;39m in 0s
2 actionable tasks: 2 executed
[0K
[0K
[2A[1m<[0;32;1;0;39;1m-------------> 0% WAITING[m[26D[1B[1m> :run[m[6D[1B[2A[2K[1B[2K[1A[0mmurphya6@CF165-18:~/csci241/lab-1-murphya6$ gradle run --args="potato"[K was here"
[0m
[1A
[1m> Task :run[m
Hello potatowashere!

[32;1mBUILD SUCCESSFUL[0;39m in 0s
2 actionable tasks: 1 executed, 1 up-to-date

[1A[1m<[0;32;1;0;39;1m-------------> 0% WAITING[m[26D[1B[1A[1m<[0;32;1;0;39;1m-------------> 0% WAITING[m[26D[1B[1A[2K[0mmurphya6@CF165-18:~/csci241/lab-1-murphya6$ r[Kgradle was [K[K[K[Krun --args="potato" "was" "here"
[0m
[1A
[31mFAILURE: [39m[31mBuild failed with an exception.[39m

* What went wrong:
Task 'was' not found in root project 'lab-1-murphya6'.

* Try:
Run [1mgradle tasks[m to get a list of available tasks. Run with [1m--stacktrace[m option to get the stack trace. Run with [1m--info[m or [1m--debug[m option to get more log output. Run with [1m--scan[m to get full insights.

* Get more help at [1mhttps://help.gradle.org[m

[31;1mBUILD FAILED[0;39m in 0s

[1A[1m<[0;32;1;0;39;1m-------------> 0% WAITING[m[26D[1B[1A[2K[0mmurphya6@CF165-18:~/csci241/lab-1-murphya6$ git add sc[Krc/main/java/lab1/Hello.java
murphya6@CF165-18:~/csci241/lab-1-murphya6$ git commit -,[Km "Hello now prints commend line arg"
[master 1cfda0b] Hello now prints commend line arg
 1 file changed, 5 insertions(+), 1 deletion(-)
murphya6@CF165-18:~/csci241/lab-1-murphya6$ git puch[K[Ksh
warning: push.default is unset; its implicit value has changed in
Git 2.0 from 'matching' to 'simple'. To squelch this message
and maintain the traditional behavior, use:

  git config --global push.default matching

To squelch this message and adopt the new behavior now, use:

  git config --global push.default simple

When push.default is set to 'matching', git will push local branches
to the remote branches that already exist with the same name.

Since Git 2.0, Git defaults to the more conservative 'simple'
behavior, which only pushes the current branch to the corresponding
remote branch that 'git pull' uses to update the current branch.

See 'git help config' and search for 'push.default' for further information.
(the 'simple' mode was introduced in Git 1.7.11. Use the similar mode
'current' instead of 'simple' if you sometimes use older versions of Git)

Username for 'https://github.com': murphya6
Password for 'https://murphya6@github.com': 
Counting objects: 7, done.
Delta compression using up to 8 threads.
Compressing objects:  33% (1/3)   Compressing objects:  66% (2/3)   Compressing objects: 100% (3/3)   Compressing objects: 100% (3/3), done.
Writing objects:  14% (1/7)   Writing objects:  28% (2/7)   Writing objects:  42% (3/7)   Writing objects:  57% (4/7)   Writing objects:  71% (5/7)   Writing objects:  85% (6/7)   Writing objects: 100% (7/7)   Writing objects: 100% (7/7), 577 bytes | 0 bytes/s, done.
Total 7 (delta 1), reused 0 (delta 0)
remote: Resolving deltas:   0% (0/1)   [Kremote: Resolving deltas: 100% (1/1)   [Kremote: Resolving deltas: 100% (1/1), completed with 1 local object.[K
To https://github.com/CSCI241Spring2019/lab-1-murphya6
   0066f34..1cfda0b  master -> master
murphya6@CF165-18:~/csci241/lab-1-murphya6$ exit
exit

Script done on Mon 15 Apr 2019 03:19:55 PM PDT
